# LEDAmbiente

./: CMakeLists.txt  README.md  changelog.txt
src/: CMakeLists.txt  resources.qrc
src/cpp/: application_engine.cpp  application_engine.hpp  device_manager.cpp  device_manager.hpp  main.cpp  model_animations.cpp  model_animations.hpp  model_colors.cpp  model_colors.hpp  model_devices.cpp  model_devices.hpp
src/qml/: Device.qml  DeviceList.qml  Page1Form.qml  Page2Form.qml  PageDeviceAlarm.qml  PageDeviceAnimation.qml  PageDeviceLight.qml  PageDeviceSetup.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/qml/Widgets/: BrightnessSlider.qml  ColorEdit.qml  ColorPicker.qml  HueSlider.qml  PowerButton.qml  SaturationSlider.qml  TimePicker.qml  qmldir
